--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
 <header>
     <h1>A conexão campo e cidade</h1>
-    <p>As relações do meio campo e cidade são importante para manter o equilíbrio,  </p>
+    <p>As relações do meio campo e cidade são importante para manter o equilíbrio, um sistema de interdependência que sustenta a sociedade.</p>
 
 </header>
 
