--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <header>
     <h1>A conexão campo e cidade</h1>
     <p>As relações do meio campo e cidade são importante para manter o equilíbrio, um sistema de interdependência que sustenta a sociedade.
+        
         A necessidade de compreender essa interdependência, onde um meio completa o outro.
     </p>
 
@@ -20,6 +21,12 @@
 
 
 <section>
+A cidade ou meio urbano, precisa do campo ou meio rural, eles complementa para uma sociedade se manter, o campo se cultiva os alimentos, agricultura e a pecuária.
+O meio urbanos, tras o comércio, produtos industrializados e tecnologias, que contribui também
+
+
+
+
 
 </section>
 
