--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
 
 <section>
-A cidade ou meio urbano, precisa do campo ou meio rural, eles complementa para uma sociedade se manter, o campo se cultiva os alimentos, agricultura e a pecuária.
+     <p>A cidade ou meio urbano, precisa do campo ou meio rural, eles complementa para uma sociedade se manter, o campo se cultiva os alimentos, agricultura e a pecuária.
 O meio urbanos, tras o comércio, produtos industrializados e tecnologias, que contribui também
 
 
 
-
+</p>
 
 </section>
 
