--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
 
 <section>
-     <p>A cidade ou meio urbano, precisa do campo ou meio rural, eles complementa para uma sociedade se manter, o campo se cultiva os alimentos, agricultura e a pecuária.
-O meio urbanos, tras o comércio, produtos industrializados e tecnologias, que contribui também
+     <p> O meio urbano atualmente concentra o maior número de cidadãos no Brasil
 
 
 
