--- a/index.html
+++ b/index.html
@@ -21,11 +21,14 @@
 
 
 <section>
-     <p> O meio urbano atualmente concentra o maior número de cidadãos no Brasil
+     <p> O meio urbano atualmente concentra o maior número de cidadãos no Brasil, o aumento de indústrias com decorrer
+        da história brasileira, centralizado nas cidades, fazendo com que as pessoas que moravam no meio rural, fossem
+        para as cidades, pois perderam seus trabalhos, com a mecanização no meio rural. O meio urbano aumentou, fornecendo
+        empregos, produtos industrializados, comércios, saúde e educação.
 
 
 
-</p>
+    </p>
 
 </section>
 
