--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         para as cidades, pois perderam seus trabalhos, com a mecanização no meio rural. O meio urbano aumentou, fornecendo
         empregos, produtos industrializados, comércios, saúde e educação.
 
+        O meio rural diminuiu signi
+
 
 
     </p>
