--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 
 
 <footer>
-     <p>  A ligação deste dois meios, desenvolve uma dependência um do outro
+     <p>  A ligação deste dois meios, desenvolve uma dependência um do outro, para manter uma sociedade bem de vida, o setor primário sendo 
+        no meio rural, onde é a produção direta da matriz, levando para os comércios no meio urbano, onde ocorre o setor secundário e terciário, 
+        que industrializa e vão para as prateleiras dos mercados. Que sustenta a economia do Brasil, sendo atualmente considerado um país industrial.
         
         
 
