--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site</title>
      <link rel="stylesheet" href="styles.css">
-    <style>
-    h1 {
+      
+</head>
+<body>
+
+  <style>   h1 {
             text-align: center;
         }
     </style>
-</head>
-<body>
-    
 <header>
-    <h1>A conexão campo e cidade1</h1>
+    <h1>A conexão campo e cidade</h1>
     <p>   A conexão entre o meio urbano e o campo, é uma relação complexa que se complementa, uma interdependência,
         para sustentarem uma sociedade. Ambos são importantes, cria um vínculo necessário para as pessoas,
         um pode fornecer o que outro precisa, cultivando formas de se auto sustentarem.
