--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site</title>
-     <link rel="stylesheet" href="styles.css">
-      
+     <link rel="stylesheet" href="style.css">     
 </head>
 <body>
 
@@ -50,5 +49,7 @@
     </p>
 
 </footer>
+
 </body>
+
 </html>
