--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         da história brasileira, centralizado nas cidades, fazendo com que as pessoas que moravam no meio rural, fossem
         para as cidades, pois perderam seus trabalhos, com a mecanização no meio rural. O meio urbano aumentou, fornecendo
         empregos, produtos industrializados, comércios, saúde e educação.
-
-          O meio rural diminuiu significativamente após os anos, e que as máquinas dominaram o espaço dos trabalhadores,
+</P>
+         <P> O meio rural diminuiu significativamente após os anos, e que as máquinas dominaram o espaço dos trabalhadores,
          em que deixou diversos cidadãos desempregados, que fez as pessoas a recorrer as cidades em busca de empregos.
         O espaço rural tem sua principal importância na produção voltadas agricultura e pecuária, que entrega para as cidades.
 
