--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
      <link rel="stylesheet" href="style.css">     
 </head>
 <body>
-  <img src="campo e cidade.png" alt="" width="1000">
+  <P> <text-center>
+    <img src="campo e cidade.png" alt="" width="800"><
+</text-center>
+    /P>
   <style>   h1 {
             text-align: center;
         }
