--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <P> <text-center>
-    <img src="campo e cidade.png" alt="" width="800"><
+    <img src="campo e cidade.png" alt="" width="800">
 </text-center>
-    /P>
+</P>
   <style>   h1 {
             text-align: center;
         }
