--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
      <link rel="stylesheet" href="style.css">     
 </head>
 <body>
-    <img src="campo e cidade.png" alt="" width="800">
+
+    <div style="text-align: center;">
+  <img src="campo e cidade.png" alt="" width="800">
+</div>
     
+
   <style>   h1 {
             text-align: center;
         }
